--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, excepturi?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, vero.</p>
-    <h1>hello people</h1>
+<script src="script\script.js"></script>
 </body>
 </html>
